Fix alignment across themes

--- a/assets/blocks/quiz/answer-blocks/option-toggle.scss
+++ b/assets/blocks/quiz/answer-blocks/option-toggle.scss
@@ -3,10 +3,11 @@
 	.edit-post-visual-editor & {
 		font-family: inherit;
 		font-size: inherit;
-		padding: 12px 2px;
+		padding: 2px;
 		margin-right: 10px;
-		margin-left: -2px;
-		margin-top: -2px;
+		align-self: flex-start;
+		height: auto;
+		line-height: inherit;
 	}
 
 	&__control {
@@ -14,7 +15,6 @@
 		height: 26px;
 		border-radius: 50%;
 		box-shadow: inset 0 0 0 1.5px currentColor;
-		margin: 2px;
 		position: relative;
 
 		&:after {
